--- a/projetos/questionario-05-03-23/style.css
+++ b/projetos/questionario-05-03-23/style.css
@@ -9,17 +9,19 @@
 
 #menu {
     display: flex;
-    height: 40px;
+    min-height: 40px;
     justify-content: space-between;
     align-items: center;
     padding: 0px 10px;
     font-size: 14px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 15px;
 }
 
 #menu p {
     color: white;
     margin-right: 15px;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+    text-shadow: 1px 1px 2px black;
 }
 
 nav{
@@ -30,7 +32,7 @@ nav{
 nav a {
     color: rgb(150, 150, 150);
     text-decoration: none;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+    text-shadow: 1px 1px 2px black;
 }
 
 nav a:hover {
@@ -38,7 +40,10 @@ nav a:hover {
 }
 
 header {
-    background-color: blue;
+    background-image: url(images/fundo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     padding: 10px;
     height: 800px;
 }
@@ -65,4 +70,14 @@ section {
     grid-column: 1 / 3;
     padding: 10px;
     height: 800px;
+}
+
+footer {
+    display: flex;
+    background-color: black;
+    color: white;
+    min-height: 50px;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
 }
