--- a/projetos/questionario-05-03-23/style.css
+++ b/projetos/questionario-05-03-23/style.css
@@ -1,83 +1,154 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500;900&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
 }
+
+/* MENU INICIAL */
 
 #menu {
-    display: flex;
-    min-height: 40px;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 10px;
-    font-size: 14px;
-    background-color: rgba(0, 0, 0, 0.4);
-    border-radius: 15px;
+  display: flex;
+  height: 50px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 10px;
+  font-size: 14px;
 }
 
-#menu p {
-    color: white;
-    margin-right: 15px;
-    text-shadow: 1px 1px 2px black;
+#menu h2 {
+  color: white;
+  margin-right: 15px;
+  text-shadow: 1px 1px 2px black;
 }
 
-nav{
-    display: flex;
-    gap: 20px;
+nav {
+  display: flex;
+  gap: 20px;
 }
 
 nav a {
-    color: rgb(150, 150, 150);
-    text-decoration: none;
-    text-shadow: 1px 1px 2px black;
+  color: rgb(180, 180, 180);
+  text-decoration: none;
+  text-shadow: 1px 1px 2px black;
 }
 
 nav a:hover {
-    color: white;
+  color: white;
 }
+
+/* HEADER */
 
 header {
-    background-image: url(images/fundo.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    padding: 10px;
-    height: 800px;
+  background-image: url(images/fundo2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom center;
+  background-attachment: fixed;
+  padding: 0px 10px;
+  height: 800px;
 }
 
+#insideheader {
+  display: flex;
+  align-items: end;
+  justify-content: space-around;
+  height: 750px;
+  width: 100%;
+}
+
+#textoheader {
+  height: 750px;
+  width: 30%;
+  max-width: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#textoheader h1 {
+  font-size: 42px;
+  font-weight: 900;
+  color: white;
+  text-shadow: 3px 3px 4px black;
+}
+
+#fotoheader {
+  height: 600px;
+  width: 50%;
+  max-width: 393px;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+
+#fotogato {
+  width: 100%;
+  max-height: 600px;
+  max-width: 393px;
+}
+
+/* PRINCIPAL */
+
 main {
-    display: grid;
-    grid-template-columns: 1.25fr 2fr;
-    margin: auto;
+  display: grid;
+  grid-template-columns: 1.25fr 2fr;
+  margin: auto;
 }
 
 aside {
-    background-color: red;
-    padding: 10px;
-    height: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  padding: 10px;
+  height: 800px;
+}
+
+aside img {
+  border-radius: 10px;
+  width: 100%;
+  min-width: 200px;
+  max-width: 450px;
 }
 
 section {
-    background-color: green;
-    padding: 10px;
-    height: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: green;
+  padding: 10px;
+  height: 800px;
 }
+
+/* FORMULARIO */
 
 #form {
-    grid-column: 1 / 3;
-    padding: 10px;
-    height: 800px;
+  grid-column: 1 / 3;
+  padding: 10px;
+  height: 800px;
 }
 
+#imagemfundo {
+  background-image: url(images/fundo3.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top;
+  height: 400px;
+}
+
+/* FOOTER */
+
 footer {
-    display: flex;
-    background-color: black;
-    color: white;
-    min-height: 50px;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
+  display: flex;
+  background-color: black;
+  color: white;
+  min-height: 50px;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
 }
