--- a/projetos/questionario-05-03-23/style.css
+++ b/projetos/questionario-05-03-23/style.css
@@ -105,7 +105,7 @@ main {
 }
 
 .fundosecundario {
-background-image: linear-gradient(#2c1e16, var(--marrom));
+  background-image: linear-gradient(#2c1e16, var(--marrom));
 }
 
 aside {
@@ -146,15 +146,8 @@ h3 {
   color: rgb(185, 119, 119);
 }
 
-#setor1{
+#setor1 {
   width: 90%;
-}
-
-#setor1 p{
-  width: 90%;
-  font-size: 24px;
-  color: var(--marrom);
-  margin-bottom: 60px;
 }
 
 #setor2 li {
@@ -165,8 +158,12 @@ h3 {
 
 #form {
   grid-column: 1 / 3;
-  padding: 10px;
-  height: 800px;
+  padding: 30px;
+}
+
+#final p {
+  font-size: 24px;
+  color: white;
 }
 
 #imagemfundo {
